# classic_mac

./: .cproject  .project  CMakeLists.txt  LICENSE  Makefile  README.md  daniels.r  main.c
.rsrc/: HelloWorld.APPL
